logs/error_fallback.log
2025-08-18 11:45:08 - config.app_setup - ERROR - setup_blueprints:297 - ❌ Blueprint registration error: GPTs API Simple - View function mapping is overwriting an existing endpoint function: gpts_simple.get_trading_signal
Traceback (most recent call last):
  File "/home/runner/workspace/config/app_setup.py", line 284, in setup_blueprints
    app.register_blueprint(blueprint)
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/scaffold.py", line 47, in wrapper_func
    return f(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/app.py", line 595, in register_blueprint
    blueprint.register(self, options)
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/blueprints.py", line 335, in register
    deferred(state)
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/blueprints.py", line 434, in <lambda>
    lambda s: s.add_url_rule(
              ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/blueprints.py", line 110, in add_url_rule
    self.app.add_url_rule(
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/scaffold.py", line 47, in wrapper_func
    return f(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/app.py", line 657, in add_url_rule
    raise AssertionError(
AssertionError: View function mapping is overwriting an existing endpoint function: gpts_simple.get_trading_signal
2025-08-18 11:45:08 - config.app_setup - ERROR - setup_blueprints:297 - ❌ Blueprint registration error: GPTs API Simple - View function mapping is overwriting an existing endpoint function: gpts_simple.get_trading_signal
Traceback (most recent call last):
  File "/home/runner/workspace/config/app_setup.py", line 284, in setup_blueprints
    app.register_blueprint(blueprint)
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/scaffold.py", line 47, in wrapper_func
    return f(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/app.py", line 595, in register_blueprint
    blueprint.register(self, options)
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/blueprints.py", line 335, in register
    deferred(state)
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/blueprints.py", line 434, in <lambda>
    lambda s: s.add_url_rule(
              ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/blueprints.py", line 110, in add_url_rule
    self.app.add_url_rule(
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/scaffold.py", line 47, in wrapper_func
    return f(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/flask/sansio/app.py", line 657, in add_url_rule
    raise AssertionError(
AssertionError: View function mapping is overwriting an existing endpoint function: gpts_simple.get_trading_signal
2025-08-18 11:45:10 - config.app_setup - ERROR - setup_blueprints:297 - ❌ Blueprint registration error: OpenAPI Schema - unexpected indent (openapi_schema.py, line 1054)
Traceback (most recent call last):
  File "/home/runner/workspace/config/app_setup.py", line 269, in setup_blueprints
    module = __import__(config['import_path'], fromlist=[''])
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/openapi_schema.py", line 1054
    "/api/performance/": {
IndentationError: unexpected indent
2025-08-18 11:45:10 - config.app_setup - ERROR - setup_blueprints:297 - ❌ Blueprint registration error: OpenAPI Schema - unexpected indent (openapi_schema.py, line 1054)
Traceback (most recent call last):
  File "/home/runner/workspace/config/app_setup.py", line 269, in setup_blueprints
    module = __import__(config['import_path'], fromlist=[''])
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/openapi_schema.py", line 1054
    "/api/performance/": {
IndentationError: unexpected indent
2025-08-18 11:45:30 - main - ERROR - create_app:85 - ❌ Critical blueprint failures: ['GPTs API Simple', 'OpenAPI Schema']
2025-08-18 11:45:30 - main - ERROR - create_app:85 - ❌ Critical blueprint failures: ['GPTs API Simple', 'OpenAPI Schema']
2025-08-18 11:45:31 - core.telegram_bot - ERROR - start_bot:165 - Failed to start telegram bot: name 'Updater' is not defined
2025-08-18 11:45:31 - config.keep_alive - ERROR - setup_keep_alive:117 - ❌ Keep-alive setup failed: 'Flask' object has no attribute 'before_first_request'
2025-08-18 11:45:31 - core.telegram_bot - ERROR - start_bot:165 - Failed to start telegram bot: name 'Updater' is not defined
2025-08-18 11:45:31 - config.keep_alive - ERROR - setup_keep_alive:117 - ❌ Keep-alive setup failed: 'Flask' object has no attribute 'before_first_request'
